fix: improve mobile responsiveness and text presentation in header styles, adjusting dropdown positioning, padding, margins, and font sizes for enhanced readability and consistency

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3014,7 +3014,7 @@ fieldset {
 .header__dropdown {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 7rem;
   width: min(74rem, 100vw - 8rem);
   background: #fff;
   border-radius: 0 0 30px 30px;
@@ -3030,13 +3030,12 @@ fieldset {
 @media (max-width: 768px) {
   .header__dropdown {
     position: fixed;
-    top: 8rem;
     left: 0;
     right: 0;
     bottom: 0;
     width: 100%;
     max-width: none;
-    padding: 3rem;
+    padding: 120px 10px;
     border-radius: 0 0 24px 24px;
     box-shadow: 0 0.8rem 2.4rem rgba(0, 0, 0, 0.12);
     overflow-y: auto;
@@ -3099,6 +3098,7 @@ fieldset {
   font-weight: 700;
   color: #003D3D;
   transition: opacity 0.2s ease;
+  letter-spacing: 5%;
 }
 .header__dropdown-list a .header__dropdown-arrow {
   width: 7px;
@@ -3115,8 +3115,12 @@ fieldset {
 @media (max-width: 768px) {
   .header__dropdown-list {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    gap: 3.9rem;
-    row-gap: 3.3rem;
+    grid-template-rows: repeat(5, auto);
+    grid-auto-flow: column;
+    gap: 39px;
+    row-gap: 33px;
+    padding: 0 10px;
+    word-break: normal;
   }
 }
 .header__dropdown-trial {
@@ -3128,14 +3132,14 @@ fieldset {
     position: relative;
     align-items: center;
     justify-content: center;
-    margin: 3.5rem auto 0 auto;
+    margin: 35px auto 15px auto;
     width: 355px;
     width: 100%;
     height: 85px;
     border-radius: 45px;
     background: #FFE44B;
     color: #008080;
-    padding: 1rem;
+    padding: 1rem 6.7rem 1rem 3.6rem;
     box-shadow: inset 0 -0.6rem 0 #DEAF04;
     font-size: 16px;
     font-weight: 500;
@@ -3146,16 +3150,23 @@ fieldset {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     text-decoration: none;
   }
+}
+@media sm and (max-width: 768px) {
+  .header__dropdown-trial {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
   .header__dropdown-trial::after {
     content: "";
     position: absolute;
-    right: 3.6rem;
+    right: 36px;
     top: 50%;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 14px;
+    height: 14px;
     transform: translateY(-50%) rotate(-45deg);
-    border-right: 0.4rem solid #008080;
-    border-bottom: 0.4rem solid #008080;
+    border-right: 4px solid #008080;
+    border-bottom: 4px solid #008080;
     transition: transform 0.3s ease;
   }
   .header__dropdown-trial:hover {
@@ -3168,18 +3179,16 @@ fieldset {
   .header__dropdown-trial-label {
     display: inline-block;
     align-items: baseline;
-    line-height: 1.3;
     margin-bottom: 1rem;
+    line-height: 1.4;
   }
   .header__dropdown-trial-num {
-    font-size: 3rem;
+    font-size: 30px;
     font-weight: 500;
-    line-height: 1.3;
   }
   .header__dropdown-trial-unit, .header__dropdown-trial-em {
-    font-size: 2rem;
+    font-size: 20px;
     font-weight: 700;
-    line-height: 1.3;
   }
 }
 .header__dropdown-brand {
@@ -3187,16 +3196,21 @@ fieldset {
 }
 @media (max-width: 768px) {
   .header__dropdown-brand {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2.8rem;
   }
   .header__dropdown-brand img {
     max-width: 35rem;
     width: 100%;
     height: auto;
     object-fit: contain;
+  }
+}
+@media (max-width: 768px) and (max-width: 576px) {
+  .header__dropdown-brand img {
+    max-width: unset;
   }
 }
 
