--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -145,7 +145,7 @@
   &__dropdown {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 7rem;
     width: min(74rem, calc(100vw - 8rem));
     background: #fff;
     border-radius: 0 0 30px 30px;
@@ -160,13 +160,12 @@
 
     @include md {
       position: fixed;
-      top: 8rem;
       left: 0;
       right: 0;
       bottom: 0;
       width: 100%;
       max-width: none;
-      padding: 3rem;
+      padding: 120px 10px;
       border-radius: 0 0 24px 24px;
       box-shadow: 0 0.8rem 2.4rem rgba(0, 0, 0, 0.12);
       overflow-y: auto;
@@ -235,7 +234,7 @@
       font-weight: 700;
       color: #003D3D;
       transition: opacity 0.2s ease;
-
+      letter-spacing: 5%;
       .header__dropdown-arrow {
         width: 7px;
         height: 7px;
@@ -253,8 +252,12 @@
 
     @include md {
       grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 3.9rem;
-      row-gap: 3.3rem;
+      grid-template-rows: repeat(5, auto);
+      grid-auto-flow: column;
+      gap: 39px;
+      row-gap: 33px;
+      padding: 0 10px;
+      word-break: normal;
     }
   }
 
@@ -266,14 +269,14 @@
       position: relative;
       align-items: center;
       justify-content: center;
-      margin: 3.5rem auto 0 auto;
+      margin: 35px auto 15px auto;
       width: 355px;
       width: 100%;
       height: 85px;
       border-radius: 45px;
       background: #FFE44B;
       color: #008080;
-      padding: 1rem;
+      padding: 1rem 6.7rem 1rem 3.6rem;
       box-shadow: inset 0 -0.6rem 0 #DEAF04;
       font-size: 16px;
       font-weight: 500;
@@ -283,17 +286,19 @@
       text-shadow: 1px 1px 0 #fff;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       text-decoration: none;
-
+      @media  sm {
+        width: 100%;
+      }
       &::after {
         content: "";
         position: absolute;
-        right: 3.6rem;
+        right: 36px;
         top: 50%;
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 14px;
+        height: 14px;
         transform: translateY(-50%) rotate(-45deg);
-        border-right: 0.4rem solid #008080;
-        border-bottom: 0.4rem solid #008080;
+        border-right: 4px solid #008080;
+        border-bottom: 4px solid #008080;
         transition: transform 0.3s ease;
       }
 
@@ -309,21 +314,19 @@
       &-label {
         display: inline-block;
         align-items: baseline;
-        line-height: 1.3;
         margin-bottom: 1rem;
+        line-height: 1.4;
       }
 
       &-num {
-        font-size: 3rem;
+        font-size: 30px;
         font-weight: 500;
-        line-height: 1.3;
       }
 
       &-unit,
       &-em {
-        font-size: 2rem;
+        font-size: 20px;
         font-weight: 700;
-        line-height: 1.3;
       }
     }
   }
@@ -332,18 +335,22 @@
     display: none;
 
     @include md {
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 2.8rem;
 
       img {
         max-width: 35rem;
         width: 100%;
         height: auto;
         object-fit: contain;
+        @include sm {
+          max-width: unset;
+        }
       }
     }
+
   }
 }
 
